testsuite/tests/rename/should_fail/T22839.hs
module T22839 where

data []

data (->)
