testsuite/tests/rename/should_fail/T22839.stderr

T22839.hs:3:1: error: [GHC-58805]
    Illegal binding of an existing name: []

T22839.hs:5:1: error: [GHC-58805]
    Illegal binding of an existing name: ->
